Fixes for the local NTP: * When the query is backspaced, show blank page. * Prevent suggestion box flickering - there's still some flickering due to multiple onnativesuggestions firing on the same query with different *non-zero* number of suggestions - not sure the best way to handle this. * Add scrollbars * Pixel/style adjustments of logo/fakebox, etc. to match online NTP.
BUG=223608,233965,230172,235127

Review URL: https://chromiumcodereview.appspot.com/14312012

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@196566 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 0fa0d6aa4c30bf331cb1a7e4bd7bbdfe119d7608

--- a/chrome/browser/resources/local_ntp/local_ntp.css
+++ b/chrome/browser/resources/local_ntp/local_ntp.css
@@ -9,13 +9,31 @@ body {
   overflow-x: hidden;
 }
 
+body.hide-ntp {
+  overflow: hidden;
+}
+
 #ntp-contents {
   text-align: -webkit-center;
+}
+
+body.hide-ntp #ntp-contents {
+  display: none;
 }
 
 body.fakebox-animate #ntp-contents {
   -webkit-transition: opacity 100ms linear;
   opacity: 0.2;
+}
+
+/* Hide suggestions during the fakebox animation. */
+body.fakebox-animate .active-suggestions-container {
+  height: 0;
+  visibility: hidden;
+}
+
+body.fakebox-animate .suggestion-contents {
+  visibility: hidden;
 }
 
 body.google-page #mv-top-margin {
@@ -27,8 +45,8 @@ body.google-page #mv-top-margin {
       url(images/google_logo.png) 1x,
       url(images/2x/google_logo.png) 2x) no-repeat;
   height: 95px;
-  margin-bottom: 20px;
-  margin-top: 144px;
+  margin-bottom: 24px;
+  margin-top: 134px;
   width: 275px;
 }
 
@@ -100,7 +118,7 @@ body.fakebox-focused #cursor {
 
 #most-visited {
   -webkit-user-select: none;
-  margin-top: 50px;
+  margin-top: 51px;
   text-align: -webkit-center;
 }
 
@@ -120,21 +138,22 @@ body.fakebox-focused #cursor {
   -webkit-transform: translate3d(0, 0, 0);
   height: 260px;
   overflow: hidden;
+  padding: 0 1em;
   white-space: nowrap;
   width: 304px;
 }
 
-@media only screen and (min-width:666px) {
+@media only screen and (min-width:660px) {
   #fakebox,
   #mv-tiles {
-    width: 466px;
+    width: 458px;
   }
 }
 
-@media only screen and (min-width:828px) {
+@media only screen and (min-width:820px) {
   #fakebox,
   #mv-tiles {
-    width: 628px;
+    width: 618px;
   }
 }
 
@@ -143,7 +162,7 @@ body.fakebox-focused #cursor {
 }
 
 .mv-tile:first-child {
-  -webkit-margin-start: 0;
+  -webkit-margin-start: -1px;
 }
 
 .mv-tile {
@@ -152,8 +171,8 @@ body.fakebox-focused #cursor {
   -webkit-transition-duration: 200ms;
   -webkit-transition-property: -webkit-transform, margin, opacity, width;
   display: inline-block;
-  height: 85px;
-  width: 140px;
+  height: 83px;
+  width: 138px;
 }
 
 .mv-tile.mv-tile-hide {
